--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <section class="visit">
             <p class="animate-up">Visite orfanato e mude o dia de muitas crianças</p>
 
-            <a href="#" title="Visite orfanatos" class="animate-up">
+            <a href="orphanages.html" title="Visite orfanatos" class="animate-up">
               <img src="./public/images/arrow.svg" alt="Ir para o mapa" />
             </a>
           </section>
